# pyrag

./: .gitignore  README.md
pyragapi/: .env  dependencies.py  ingest.py  main.py  pyproject.toml
pyragapi/api/: health_controller.py  rag_controller.py
pyragapi/chroma_db/: chroma.sqlite3
pyragapi/models/: rag_request.py  rag_response.py
pyragapi/rag/: rag_engine.py
pyragapi/services/: rag_service.py
pyragclient/: README.md  angular.json  package-lock.json  package.json
pyragclient/src/: index.html  main.ts
pyragclient/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
pyragclient/src/app/components/rag-chat/: rag-chat.component.css  rag-chat.component.html  rag-chat.component.ts
pyragclient/src/app/models/: chat-message.ts  rag-request.ts  rag-response.ts
pyragclient/src/app/services/: rag.service.ts
